# magicunicorns

./: CMakeLists.txt  README.TXT  orm.cxx
include/: magicunicorns.hpp
tests/: CMakeLists.txt  constraint.cpp  db.cpp  main.cpp  max.cpp  trigger.cpp  update.cpp
